load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")

kt_jvm_library(
    name = "model-gltf",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    visibility = ["//model:__pkg__"],
    deps = [
        "//model/model-base",
        "//:kotlin_serialization",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_json",
    ],
)

kt_jvm_test(
	name = "glb_load_test",
    srcs = ["src/test/kotlin/top/fifthlight/renderer/model/gltf/test/GlbLoadTest.kt"],
    resources = ["@//model/model-gltf/src/test/resources:test_models"],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    args = ["execute", "--select-class", "top.fifthlight.renderer.model.gltf.test.GlbLoadTest"],
    associates = [":model-gltf"],
    deps = [
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit5",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
    ],
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_console",
    ],
)
