load("@rules_java//java:defs.bzl", "java_library")
load("//rule:extract_access_widener.bzl", "extract_access_widener")
load("//rule:apply_access_widener.bzl", "apply_access_widener")
load("//rule:merge_jij.bzl", "merge_jij")
load("//rule:remap_jar.bzl", "remap_jar")
load("//rule:generate_remap_classpath.bzl", "generate_remap_classpath")
load("//rule:decompile_jar.bzl", "decompile_jar")
load("//:properties.bzl", "game_version")

remap_jar(
    name = "remapped_deps",
    classpath = [
        "//game:remapped_client_intermediary",
    ],
    inputs = ["@maven//:net_fabricmc_fabric_api_fabric_api"],
    mixin = True,
    remap_transitive_deps = True,
    remove_jar_in_jar = True,
    mapping = "//game:merged_mapping",
    from_namespace = "intermediary",
    to_namespace = "named",
)

extract_access_widener(
    name = "access_widener_dep_named",
    inputs = [":remapped_deps"],
)

apply_access_widener(
    name = "remapped_client_access_widened_named",
    input = "//game:remapped_client_named",
    srcs = [":access_widener_dep_named"],
)

decompile_jar(
    name = "decompile_client_access_widened_named",
    inputs = [":remapped_client_access_widened_named"],
)

java_library(
    name = "ball_block_unmapped",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
    deps = [
        ":remapped_client_access_widened_named",
        ":remapped_deps",
        "//blazerod/model/model-formats:model-formats",
        "//blazerod/render:render_unmapped",
        "@maven//:net_fabricmc_fabric_loader",
        "@minecraft//:%s_client_libraries" % game_version,
    ],
)

remap_jar(
    name = "ball_block_without_jij",
    inputs = [":ball_block_unmapped"],
    classpath = ["//game:remapped_client_named"],
    mapping = "//game:merged_mapping",
    mixin = True,
    from_namespace = "named",
    to_namespace = "intermediary",
)

merge_jij(
    name = "ball_block",
    input = ":ball_block_without_jij",
    deps = {
        "//blazerod/model/model-base": "blazerod-model-base:=",
        "//blazerod/model/model-formats": "blazerod-model-formats:=",
        "//blazerod/model/model-gltf": "blazerod-model-formats-gltf:=",
        "//blazerod/model/model-pmd": "blazerod-model-formats-pmd:=",
        "//blazerod/model/model-pmx": "blazerod-model-formats-pmx:=",
        "//blazerod/model/model-vmd": "blazerod-model-formats-vmd:=",
        "//blazerod/render": "blazerod-render:=",
    },
)

generate_remap_classpath(
    name = "remap_classpath",
    prefix = "../../../../../../",
    deps = [":remapped_deps", "//game:remapped_client_intermediary"],
)

java_binary(
    name = "client",
    srcs = [],
    data = [
        ":remap_classpath",
        "@minecraft_assets//:assets_%s" % game_version,
    ],
    runtime_deps = [
        "//rule/dev_launch_wrapper",
        "@minecraft//:%s_client_libraries" % game_version,
        ":ball_block_unmapped",
        "//game:remapped_client_named",
        ":remapped_deps",
        "//blazerod:blazerod_without_jij",
        "@maven//:net_fabricmc_fabric_language_kotlin",
        "@maven//:net_fabricmc_fabric_loader",
        "@maven//:net_fabricmc_sponge_mixin",
        "@maven//:io_github_llamalad7_mixinextras_fabric",
        "@maven//:net_fabricmc_yarn_v2",
    ],
    main_class = "top.fifthlight.fabazel.devlaunchwrapper.DevLaunchWrapper",
    jvm_flags = [
        "-Dfabric.development=true",
        "-Dfabric.log.disableAnsi=false",
        "-Dfabric.remapClasspathFile=../../remap_classpath.txt",
        "-Ddev.launch.version=%s" % game_version,
        "-Ddev.launch.type=client",
        "-Ddev.launch.assetsPath=../+minecraft+minecraft_assets",
        "-Ddev.launch.mainClass=net.fabricmc.loader.impl.launch.knot.KnotClient",
        "-Dblazerod.debug=true",
        "-Dblazerod.debug.gui=true",
        "-Xmx4G",
    ],
)
