load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("//:properties.bzl", "blazerod_version", "blazerod_description")

expand_template(
    name = "fabric_mod_json",
    template = "src/main/resources/fabric.mod.json",
    substitutions = {
        "${version}": blazerod_version,
        "${description}": blazerod_description,
    },
    out = "fabric.mod.json",
)

kt_jvm_library(
    name = "model-base",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    resources = [":fabric_mod_json"],
    resource_strip_prefix = "blazerod/model/model-base",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:org_joml_joml",
        "@maven//:it_unimi_dsi_fastutil",
    ],
)
