load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("//rule:fabric_mod_json_jar.bzl", "fabric_mod_json_jar")
load("//rule:merge_jar.bzl", "merge_jar")
load("//:properties.bzl", "blazerod_version")

fabric_mod_json_jar(
    name = "fabric_mod_json",
    src = "src/main/resources/fabric.mod.json",
    substitutions = {
        "${version}": blazerod_version,
    },
    resource_strip_prefix = "blazerod/model/model-base",
)

kt_jvm_library(
    name = "model-base",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    deps = [
        "@maven//:org_joml_joml",
        "@maven//:it_unimi_dsi_fastutil",
    ],
    exports = [
        "@maven//:org_slf4j_slf4j_api",
    ],
    resource_jars = [
        ":fabric_mod_json",
        "//blazerod:icon",
    ],
    visibility = ["//visibility:public"],
)
