load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("//:properties.bzl", "blazerod_version")

formats = ["gltf", "pmx", "pmd", "vmd"]
format_targets = ["//blazerod/model/model-" + format for format in formats]

expand_template(
    name = "fabric_mod_json",
    template = "src/main/resources/fabric.mod.json",
    substitutions = {
        "${version}": blazerod_version,
    },
    out = "fabric.mod.json",
)

kt_jvm_library(
    name = "model-formats",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    resources = [":fabric_mod_json"],
    resource_strip_prefix = "blazerod/model/model-formats",
    visibility = ["//visibility:public"],
    deps = format_targets,
    exports = ["//blazerod/model/model-base"] + format_targets,
)
