load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("//:properties.bzl", "blazerod_version")
load("//rule:fabric_mod_json_jar.bzl", "fabric_mod_json_jar")
load("//rule:merge_jar.bzl", "merge_jar")

formats = [
    "gltf",
    "pmx",
    "pmd",
    "vmd",
]

format_targets = ["//blazerod/model/model-" + format for format in formats]

fabric_mod_json_jar(
    name = "fabric_mod_json",
    src = "src/main/resources/fabric.mod.json",
    resource_strip_prefix = "blazerod/model/model-formats",
    substitutions = {
        "${version}": blazerod_version,
    },
)

kt_jvm_library(
    name = "model-formats",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    resource_jars = [
        ":fabric_mod_json",
        "//blazerod:icon",
    ],
    visibility = ["//visibility:public"],
    exports = ["//blazerod/model/model-base"],
    deps = format_targets,
)
