load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("//rule:merge_jar.bzl", "merge_jar")
load("//:properties.bzl", "blazerod_version")

expand_template(
    name = "fabric_mod_json",
    template = "src/main/resources/fabric.mod.json",
    substitutions = {
        "${version}": blazerod_version,
    },
    out = "fabric.mod.json",
)

kt_jvm_library(
    name = "model-pmd_unmerged",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    resources = [":fabric_mod_json"],
    resource_strip_prefix = "blazerod/model/model-pmd",
    visibility = ["//visibility:public"],
    deps = ["//blazerod/model/model-base:model-base_unmerged"],
)

merge_jar(
    name = "model-pmd",
    visibility = ["//visibility:public"],
    deps = [
        ":model-pmd_unmerged",
    ],
    resources = {
        "//blazerod:icon": "blazerod/src/main/resources/",
    }
)
